# crypto-price-checker

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/crypto_price_checker/: __init__.py  cli.py
src/crypto_price_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_crypto_price_checker.py
